Fix broken link
Perhaps later this area can be re-arranged, but it would need some
careful thought.

--- a/assets/projectwide-navbar/v0.0.1/projectwide-navbar.html
+++ b/assets/projectwide-navbar/v0.0.1/projectwide-navbar.html
@@ -26,7 +26,7 @@
       <div class="projectwide-navbar-dropdown-button">Developers&nbsp;&#8595;</div>
       <ul class="projectwide-navbar-dropdown-selection">
         <li><a href="https://dev.folio.org/">Documentation</a></li>
-        <li><a href="https://dev.folio.org/source/components/">Source Code</a></li>
+        <li><a href="https://dev.folio.org/source-code/">Source Code</a></li>
         <li><a href="https://folio-project.slack.com/messages/">Chat</a></li>
         <li><a href="https://slack-invitation.folio.org/">Chat (Sign Up)</a></li>
         <li><a href="https://issues.folio.org/"> Issue Tracker</a></li>
